pyarmor.error.log
80551 MainProcess 2025-05-21 14:40:18,667
Traceback (most recent call last):
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 752, in main
    main_entry(sys.argv[1:])
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 740, in main_entry
    return args.func(ctx, args)
           ^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 244, in cmd_gen
    builder.process(options)
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/generate.py", line 188, in process
    self._obfuscate_scripts()
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/generate.py", line 144, in _obfuscate_scripts
    code = Pytransform3.generate_obfuscated_script(self.ctx, r)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/core/__init__.py", line 93, in generate_obfuscated_script
    return m.generate_obfuscated_script(ctx, res)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 713, in generate_obfuscated_script
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/__init__.py", line 16, in process
    return meth(self, res, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 512, in process
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/resource.py", line 144, in reparse
    self.mtree = ast.parse(''.join(lines), self.frozenname, 'exec')
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/Cellar/python@3.11/3.11.11/Frameworks/Python.framework/Versions/3.11/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen post>", line 694
    text=f"⬇️ Отправьте кнопки в формате:\n\n{ BlockQuote("Название - Ссылка").as_html()} {BlockQuote ('Название - Ссылка|Название - Ссылка').as_html()} Результат: 2 кнопки в столбик\n\n",
                                                           ^^^^^^^^
SyntaxError: f-string: unmatched '('
